# houhou-2

./: .gitmodules  README.md
backend/: Application.hs  Foundation.hs  Model.hs  Settings.hs  houhou2-backend.cabal  stack.yaml
backend/Handler/: Home.hs  Kanji.hs
backend/app/: devel.hs
backend/config/: keter.yml  models-readonly  routes  settings.yml  test-settings.yml
backend/templates/: homepage.hamlet
dbinterface/: README.md  dbinterface.cabal  default.nix  shell.nix
dbinterface/src/: DB.hs  DBInstances.hs  DBInterface.hs  Interface.hs  JSONInstances.hs  Main.hs  Model.hs
dbmodel/: README.md  dbmodel.cabal  default.nix
dbmodel/src/: DB.hs  DBInstances.hs  JSONInstances.hs  Model.hs
fixsrsdb/: Main.hs  fixsrsdb.cabal
frontend/: default.nix  houhou2-frontend.cabal  shell.nix
frontend/src/: AudioCapture.hs  AudioProcessor.hs  FrontendCommon.hs  KanjiBrowser.hs  SpeechRecog.hs  SrsWidget.hs  main.hs
server/: ChangeLog.md  default.nix  houhou2-server.cabal  shell.nix
server/app/: Main.hs
server/src/: AppWebsocket.hs  AudioProcessor.hs  Handlers.hs  Main.hs  Utils.hs
server/test/: HandlerTests.hs  Main.hs
shared/: ChangeLog.md  Common.hs  Message.hs  Radicals.hs  default.nix  houhou2-shared.cabal
