name:                dbinterface
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dfordivam/dbinterface#readme
author:              Divam Narula
maintainer:          dfordivam@gmail.com
copyright:           All rights reserved
category:            web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable dbinterface
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , protolude
