name:                fixsrsdb
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dfordivam/
author:              Divam Narula
maintainer:          dfordivam@gmail.com
copyright:           All rights reserved
category:            web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fixsrsdb
  main-is:             Main.hs
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
                     , time
                     , sqlite-simple
  default-language:    Haskell2010

