name:              houhou2-frontend
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple
copyright: 2017 Divam Narula <dfordivam@gmail.com>
maintainer: Divam Narula <dfordivam@gmail.com>
synopsis: TODO
description: TODO
category: TODO
author: Divam Narula <dfordivam@gmail.com>

executable         houhou2-frontend
    main-is:           main.hs
    hs-source-dirs:  src, src-shared
    other-modules:
                KanjiBrowser
                Message

    extensions:
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                CPP

    build-depends:
                  base
                , bytestring
                , text
                , aeson
                , containers
                , ghcjs-dom
                , reflex
                , reflex-dom
                , file-embed
                , uri-bytestring

  if impl(ghcjs)
    build-depends: ghcjs-base

  default-language:    Haskell2010
