name:              houhou2-frontend
version:           0.1.0
cabal-version:     >= 1.8
build-type:        Simple
copyright: 2017 Divam Narula <dfordivam@gmail.com>
maintainer: Divam Narula <dfordivam@gmail.com>
synopsis: TODO
description: TODO
category: TODO
author: Divam Narula <dfordivam@gmail.com>

executable         houhou2-frontend
    main-is:           main.hs
    hs-source-dirs:  src
    other-modules:
                KanjiBrowser
                AudioCapture
                AudioProcessor
                SrsWidget
                SpeechRecog
                FrontendCommon

    extensions:
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                NoImplicitPrelude
                RecursiveDo
                ConstraintKinds
               PartialTypeSignatures
                ScopedTypeVariables

    build-depends:
                  base
                , bytestring
                , text
                , aeson
                , containers
                , ghcjs-dom
                , ghcjs-dom-jsffi
                , reflex
                , reflex-dom
                , reflex-dom-core
                , file-embed
                , uri-bytestring
                , houhou2-shared
                , reflex-websocket-interface-shared
                , reflex-websocket-interface
                , protolude
                , primitive
                , reflex-dom-semui
                , data-default
                , lens
                , time
                , romkan
                , jsaddle
                , hsmfcc
                , vector
                , dsp
                , binary
                , vector-binary-instances
                , tagged
                , these

  if impl(ghcjs)
    build-depends: ghcjs-base

  default-language:    Haskell2010
