name:                houhou2-server
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Divam
maintainer:          dfordivam@gmail.com
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable houhou2-server
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  default-extensions:  NoImplicitPrelude
  build-depends:       base >=4.9 && <4.10
                     , protolude
                     , wai-websockets
                     , aeson
  hs-source-dirs:      src
  default-language:    Haskell2010
