name:                houhou2-server
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Divam
maintainer:          dfordivam@gmail.com
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable houhou2-server
  main-is:             Main.hs
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
                     , houhou2-server
  hs-source-dirs:      app
  default-language:    Haskell2010

library
  exposed-modules:     Handlers
                       AppWebsocket
                       AudioProcessor
  other-modules:       Utils
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
  build-depends:       base >=4.9 && <4.10
                     , protolude
                     , warp
                     , wai
                     , wai-websockets
                     , websockets
                     , http-types
                     , aeson
                     , containers
                     , dbinterface
                     , dbmodel
                     , lens
                     , text
                     , mtl
                     , sqlite-simple
                     , houhou2-shared
                     , reflex-websocket-interface-shared
                     , reflex-websocket-interface-server
                     , pretty-simple
                     , time
                     , random
                     , dsp
                     , bytestring
                     , binary
                     , vector
                     , vector-binary-instances
                     , data-binary-ieee754
                     , hsjulius

test-suite unit
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules: HandlerTests
  build-depends: base, text, bytestring, time, tasty, tasty-hunit
               , houhou2-server, dbinterface, houhou2-shared, mtl, sqlite-simple, pretty-simple
  default-language: Haskell2010
  default-extensions: OverloadedStrings, FlexibleInstances, FlexibleContexts, GADTs, TypeFamilies,
                      DeriveGeneric, DefaultSignatures, RankNTypes, StandaloneDeriving, KindSignatures,
                      TypeApplications, ScopedTypeVariables, MultiParamTypeClasses